[tool.poetry]
name = "mqtt-hpui-messenger"
version = "0.1.0"
description = ""
authors = ["fperellaholfeld <fperellaholfeld@gmail.com>"]
readme = "README.md"
packages = [{include = "mqtt_hpui_messenger"}]

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
